project/css/new-age.css
/* ... */
section.hiw .section-heading h2 {
  margin-top: 0;
}

section.hiw .section-heading p {
  margin-bottom: 0;
}

section.standardization {
  padding-top: 30px;
  padding-bottom: 30px;
}

@media (min-width: 992px) {
  section.standardization {
    padding-bottom: 100px;
    padding-top: 100px;
  }
}

section.standardization .container {
  display: flex;
  flex-direction: column;
}

@media (min-width: 992px) {
  section.standardization .container {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    align-content: flex-end;
    align-self: flex-end;
    margin-right: 0px;
    padding-right: 0px;
    margin-left: auto;
  }
}

section.standardization .showLarge {
  display: none;
}

section.standardization img {
  -webkit-filter: drop-shadow(0px 0px 5px #AAAAAA);
  filter: drop-shadow(0px 0px 5px #AAAAAA);
}

section.standardization .hideLarge {
  display: inline;
  max-width: 300px;
  align-self: center;
}

@media (min-width: 768px) {
  section.standardization .hideLarge {
    max-width: 450px;
  }
}

@media (min-width: 992px) {
  section.standardization .showLarge {
    display: inline;
  }

  section.standardization .hideLarge {
    display: none;
  }
}

@media (min-width: 992px) {
  section.standardization .section-heading {
    padding-right: 10%;
  }
}

section.standardization .ui-large {
  align-self: flex-end;
  width: 40%;
}

section.benefits {
  background-image: linear-gradient(#0085D8, #68BDF2);
  padding-top: 65px;
  position: relative;
  margin-bottom: 0px;
  padding-bottom: 10px;
}

@media (min-width: 768px) {
  section.benefits {
    margin-bottom: 170px;
  }
}

section.benefits:after {
  content: " ";
  position: absolute;
  display: block;
  height: 37%;
  width: 100%;
  top: 70%;
  left: 0;
  z-index: -1;
  background: #68BDF2;
  -ms-transform: skewY(-8deg);
  -webkit-transform: skewY(-8deg);
  transform: skewY(-8deg);
}

@media (min-width: 768px) {
  section.benefits:after {
    content: " ";
    position: absolute;
    display: block;
    height: 50%;
    width: 100%;
    top: 80%;
    left: 0;
    z-index: -1;
    background: #68BDF2;
    -ms-transform: skewY(-8deg);
    -webkit-transform: skewY(-8deg);
    transform: skewY(-8deg);
  }
}

section.benefits .platformBenefits {
  width: 100%;
  margin-top: 30px;
  margin-bottom: 50px;
}

@media (min-width: 768px) {
  section.benefits .platformBenefits {
    width: 65%;
  }
}

section.benefits h5 {
  color: white;
}

section.benefits h6 {
  font-weight: bold;
}

section.benefits .beneficiaries {
  display: flex;
}

section.benefits .beneficiaries .row {
  flex: 1;
}

section.benefits .beneficiaries ul {
  padding-inline-start: 20px;
}

section.benefits .beneficiaries li {
  text-align: left;
}

.beneficiaries h6 {
  text-align: left;
}

section.overview {
  padding-top: 160px;
  padding-bottom: 50px;
}

section.overview h5 {
  margin-bottom: 30px;
}

section.overview .platformOverview {
  width: 100%;
  max-width: 880px;
  align-self: center;
  /* margin-left: 3%; */
}

@media (min-width: 768px) {
  section.overview .platformOverview {
    width: 50%;
    /* max-width: 880px; */
    align-self: center;
    margin-left: 2%;
  }
}

.mobile {
  display: inline;
}

.full {
  display: none;
}

@media (min-width: 576px) {
  .mobile {
    display: none;
  }

  .full {
    display: inline;
  }
}

.mobileHidden {
  display: none !important;
}

.mobileShown {
  display: flex !important;
}

@media (min-width: 576px) {
  .mobileHidden {
    display: flex !important;
  }
  .mobileShown {
    display: none !important;
  }
}

section.contact {
  background: -webkit-gradient(linear, right top, left top, from(gray), to(white));
  background: linear-gradient(to bottom, gray, white);
  display: flex;
  justify-content: space-between;
}

section.contact h5 {
  margin: 0 0 30px 0;
  color: white;
}

section.contact h4 {
  color: white;
  padding: 10px;
  margin: 0;
  font-size: .8rem;
  font-weight: bold !important;
}

section.contact .contactInfo {
  border-radius: 3px;
  text-align: left;
}

section.contact .contactInfo ul {
  list-style: none;
  padding: 0;
}

.card {
  background-color: white;
  margin: 10px 0;
  border: none;
}

@media (min-width: 576px) {
  .card {
    min-height: 175px;
  }
}

@media (min-width: 992px) {
  .card {
    margin: 20px 0;
  }
}

.card .cardTitle {
  background-color: #0090EA;
  border-radius: 3px 3px 0 0;
}

.card .background {
  padding: 15px 15px 0 15px;
}

.card li {
  color: gray;
}

@media (min-width: 576px) {
  .resizePadding {
    padding-left: 5px;
    padding-right: 5px;
  }
  .card li {
    font-size: 0.75rem;
  }
}

@media (min-width: 780px) {
  .resizePadding {
    padding-left: 15px;
    padding-right: 15px;
  }
  .card li {
    font-size: 1rem;
  }
}

.imprint {
  float:right;
}

.doubleMargin {
  margin-top: 20px;
}

@media (min-width: 992px) {
  .doubleMargin {
    margin-top: 10px;
  }
}

.align-center {
  text-align: center;
  font-size: 10px!important;
  margin-right: 5px;
}

section.legal {
  padding-bottom: 80px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

section.legal .fakeButton {
  border-radius: 7px;
  background-color: #0090EA;
  width: 85px;
  align-self: center;
  text-align: center;
  margin-top: 30px;
  padding: 5px 10px;
}

section.legal a{
  color: white;
  text-decoration: none;
}

footer {
  padding: 25px 0;
  text-align: center;
  color: rgba(255, 255, 255, 0.3);
  background-color: #222222;
}

footer ul {
  margin-bottom: 0;
}

footer a {
  color: rgba(255, 255, 255, 0.5);
}

footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
  text-decoration: none;
}

.bg-primary {
  background: white !important;
}

.text-primary {
  color: #0090EA;
}

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0;
}

.btn-outline {
  color: white;
  border: 1px solid;
  border-color: white;
}
/* ... */

